[tool.poetry]
name = "argos"
version = "0.1.0"
description = "Privacy-aware service migration strategy for edge computing environments"
authors = ["Paulo Severo <opaulosevero@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1,<3.10"
edge-sim-py = {path = "edge_sim_py-0.1.0-py3-none-any.whl"}
numpy = "^1.21.2"
pymoo = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
